--- a/Assets/Scripts/Runtime/HumansVsAliensRuntime.asmdef
+++ b/Assets/Scripts/Runtime/HumansVsAliensRuntime.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:22861456e4a0b8341918ca81a729e9c0"
+        "GUID:22861456e4a0b8341918ca81a729e9c0",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:9503a1d62ef696340b44109afe91fb39"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
