Network first steps

--- a/Assets/Scripts/Runtime/HumansVsAliensRuntime.asmdef
+++ b/Assets/Scripts/Runtime/HumansVsAliensRuntime.asmdef
@@ -9,7 +9,10 @@
         "GUID:9503a1d62ef696340b44109afe91fb39",
         "GUID:8f01a8ef5e72d2c47845fc052856a9e9",
         "GUID:029c1c1b674aaae47a6841a0b89ad80e",
-        "GUID:86dfb3129c2753a4ebf053385d9f30fa"
+        "GUID:86dfb3129c2753a4ebf053385d9f30fa",
+        "GUID:831409e8f9d13b5479a3baef9822ad34",
+        "GUID:08a110bd598f7604f9519c2d7e1fb3cc",
+        "GUID:57c32fc907df0f54e8e6e8f0d2488336"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
