--- a/Assets/Scripts/Runtime/HumansVsAliens.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/HumansVsAliens.Runtime.asmdef
@@ -14,7 +14,8 @@
         "GUID:08a110bd598f7604f9519c2d7e1fb3cc",
         "GUID:57c32fc907df0f54e8e6e8f0d2488336",
         "GUID:15fdf079309a3784da2a4435bdfa3335",
-        "GUID:456e76650ea7cae40bf11951076572cf"
+        "GUID:456e76650ea7cae40bf11951076572cf",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
